# repartir

./: .cargo-mutants.toml  .gitignore  .pmat-baseline.json  CHANGELOG.md  Cargo.toml  GOLDEN_TRACE_INTEGRATION_SUMMARY.md  Makefile  README.md  RELEASE_NOTES_v1.0.0.md  deny.toml  lcov.info  pmat.toml  renacer.toml
.githooks/: pre-commit
.github/workflows/: jidoka-gates.yml
benches/: pool_bench.rs  scheduler_bench.rs
book/: README.md  book.toml
book/src/: SUMMARY.md  introduction.md
book/src/advanced/: binary-signing.md  custom-executors.md  distributed-ml.md  fault-recovery.md
book/src/appendix/: comparison.md
book/src/architecture/: fault-tolerance.md  message-oriented.md  pure-rust.md  scheduler.md  task-model.md
book/src/development/: certeza.md  genchi-genbutsu.md  iron-lotus.md  jidoka.md  kaizen.md  tier1-tests.md  tier2-tests.md  tier3-tests.md
book/src/ecosystem/: aprender.md  paiml-stack.md  renacer.md
book/src/examples/: cpu-task.md  gpu-compute.md  heterogeneous-pool.md  remote-work.md
book/src/executors/: cpu-env.md  cpu-process.md  cpu.md  gpu-buffers.md  gpu-examples.md  gpu-pipelines.md  gpu-wgsl.md  gpu.md  overview.md  remote-binaries.md  remote-tcp.md  remote-tls.md  remote.md
book/src/getting-started/: first-task.md  installation.md  quick-start.md
book/src/messaging/: pubsub.md  pushpull.md
book/src/scheduler/: work-stealing.md
book/src/specifications/: iron-lotus-spec.md  sovereign-ai.md
docs/benchmarks/: README.md
docs/specifications/: repartir-distributed-cpu-gpu-data-hpc-spec.md  v2-data-integration-spec.md
docs/testing/: mutation-testing.md
examples/: checkpoint_example.rs  gpu_detect.rs  hello_repartir.rs  locality_scheduling.rs  pubsub_example.rs  pushpull_example.rs  tensor_example.rs  tls_example.rs  v1_1_showcase.rs
golden_traces/: ANALYSIS.md  hello_repartir.json  hello_repartir_source.json  hello_repartir_summary.txt  pubsub_example.json  pubsub_example_summary.txt  v1_1_showcase_summary.txt
scripts/: README.md  capture_golden_traces.sh  generate-test-certs.sh  install-hooks.sh
src/: lib.rs  messaging.rs
src/checkpoint/: mod.rs
src/error/: mod.rs
src/executor/: cpu.rs  gpu.rs  mod.rs  remote.rs  tls.rs
src/scheduler/: locality.rs  mod.rs
src/state/: mod.rs
src/task/: mod.rs
src/tensor/: mod.rs
tests/: integration_tests.rs  property_tests.rs
