[package]
name = "repartir"
version = "0.1.0"
edition = "2021"
authors = ["Pragmatic AI Labs"]
description = "Sovereign AI-grade distributed computing primitives for Rust (CPU, GPU, HPC)"
repository = "https://github.com/paiml/repartir"
license = "MIT"
keywords = ["distributed", "hpc", "gpu", "cpu", "sovereign-ai"]
categories = ["concurrency", "science"]
readme = "README.md"
documentation = "https://docs.rs/repartir"

[features]
default = ["cpu"]
cpu = ["tokio", "num_cpus"]
# gpu = ["wgpu"]  # v1.1+
remote = ["tokio", "bincode", "tracing-subscriber"]
remote-tls = ["remote", "rustls", "tokio-rustls", "rustls-pemfile"]
full = ["cpu", "remote", "remote-tls"]  # GPU in v1.1+

[dependencies]
# Core async runtime (industry standard, pure Rust)
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "process", "io-util", "macros", "net"], optional = true }

# CPU backend
num_cpus = { version = "1.16", optional = true }

# GPU backend (pure Rust via gfx-rs)
# NOTE: v1.0 focuses on CPU; GPU implementation in v1.1+
# wgpu = { version = "0.20", optional = true }

# Serialization (ubiquitous, zero-C)
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3", optional = true }

# TLS support (NOTE: rustls uses aws-lc-rs which has C dependencies)
# v1.2+: Explore pure Rust alternatives (RustCrypto) for full sovereignty
rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.0", optional = true }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# UUIDs for stable IDs (per Iron Lotus case study)
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging (for binaries)
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
# Property-based testing (certeza Tier 2)
proptest = "1.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Async testing
tokio-test = "0.4"

# For examples
tracing-subscriber = "0.3"
futures = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

# Iron Lotus: Strict lint enforcement
[lints.clippy]
# Set lint groups to lower priority so specific lints can override
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Deny certain patterns (Iron Lotus: no unwrap/panic/todo)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"

# Allow some pedantic lints that conflict with idiomatic Rust
module_name_repetitions = "allow"
similar_names = "allow"

# Allow multiple crate versions (transitive dependency issue)
multiple_crate_versions = "allow"

[profile.dev]
# Fast incremental compilation for Tier 1 feedback
opt-level = 0

[profile.test]
# Optimizations for faster test execution (Tier 2)
opt-level = 1

[profile.release]
# Production optimizations (Sovereign AI: maximum performance)
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
# Benchmark optimizations
lto = true
codegen-units = 1

[[bench]]
name = "scheduler_bench"
harness = false

[[bench]]
name = "pool_bench"
harness = false

[[bin]]
name = "repartir-worker"
required-features = ["remote"]
